--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "ayush-portfolio",
   "private": true,
@@ -10,19 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@studio-freight/lenis": "^1.0.42",
     "autoprefixer": "10.4.17",
-    "postcss": "8.4.33",
-    "tailwindcss": "3.4.3",
-    "@studio-freight/lenis": "1.0.38",
     "framer-motion": "11.2.6",
     "gsap": "3.12.5",
-    "react-spring": "9.7.3",
-    "next-themes": "0.2.1",
     "lucide-react": "0.447.0",
-    "react-icons": "5.2.1"
+    "next": "14.2.5",
+    "next-themes": "0.2.1",
+    "postcss": "8.4.33",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "5.2.1",
+    "react-spring": "9.7.3",
+    "tailwindcss": "3.4.3"
   },
   "devDependencies": {
     "eslint": "8.57.0",
